--- a/application/client/src/scss/components/_sort.scss
+++ b/application/client/src/scss/components/_sort.scss
@@ -8,6 +8,12 @@
 
         svg {
             margin-right: 8px;
+            transition: transform 0.3s;
+            transform-origin: center center;
+
+            &.rotate {
+                transform: rotate(-180deg);
+            }
         }
 
         b {
