--- a/application/client/src/scss/components/_categories.scss
+++ b/application/client/src/scss/components/_categories.scss
@@ -28,4 +28,13 @@
             }
         }
     }
+
+    @media (max-width: 980px) {
+        overflow-x: scroll;
+        width: 100%;
+
+        ul {
+            width: 780px;
+        }
+    }
 }
