--- a/application/client/src/scss/app.scss
+++ b/application/client/src/scss/app.scss
@@ -14,6 +14,10 @@ body {
     margin: 50px auto;
     border-radius: 10px;
     max-width: 1400px;
+
+    @media (max-width: 400px) {
+        width: calc(100vw - 30px);
+    }
 }
 
 .content {
@@ -21,18 +25,41 @@ body {
 
     &__title {
         margin: 35px 0;
+        font-weight: 800;
+        font-size: 48px;
+
+        @media (max-width: 640px) {
+            text-align: center;
+        }
     }
 
     &__items {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 11px;
+
+        @media (max-width: (1400px)) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media (max-width: 1000px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 730px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 
     &__top {
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media (max-width: 1300px) {
+            flex-direction: column;
+        }
     }
 }
 
