--- a/application/client/src/scss/components/_header.scss
+++ b/application/client/src/scss/components/_header.scss
@@ -8,6 +8,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media (max-width: 640px) {
+            flex-direction: column;
+        }
     }
 
     &__logo {
@@ -15,6 +19,10 @@
 
         img {
             margin-right: 15px;
+
+            @media (max-width: 640px) {
+                margin: 0 auto;
+            }
         }
 
         h1 {
@@ -27,6 +35,17 @@
 
         p {
             color: #7b7b7b;
+        }
+
+        @media (max-width: 640px) {
+            flex-direction: column;
+            text-align: center;
+        }
+    }
+
+    &__cart {
+        @media (max-width: 640px) {
+            margin-top: 10px;
         }
     }
 }
