--- a/application/client/src/scss/components/_pizza-block.scss
+++ b/application/client/src/scss/components/_pizza-block.scss
@@ -3,11 +3,9 @@
 .pizza-block {
     width: 280px;
     text-align: center;
+    align-self: center;
+    justify-self: center;
     margin-bottom: 65px;
-
-    &:not(:nth-of-type(4n)) {
-        margin-right: 35px;
-    }
 
     &__image {
         width: 260px;
